<resources>
	<string name="app_name">FirstApplication</string>
	<string name="text_ne">Hello world</string>
	<string name="output_text">结果为：</string>
	<string name="input_hint">请输入摄氏温度：</string>
	<string name="button1">转化为华摄度：</string>
	<string name="team_name">TeamA</string>
	<string name="team_nameb">TeamB</string>
	<string name="score">0</string>
	<string name="score_three">+3 POINTS</string>
	<string name="score_two">+2 POINTS</string>
	<string name="score_one">+1 POINTS</string>
	<string name="score_reset">RESET</string>
	<string name="bnt_dollar_label">Dollar</string>
	<string name="rmb_hint">input your name</string>
	<string name="bnt_euro_label">Euro</string>
	<string name="bnt_won_label">Won</string>
	<string name="btn_opencfg_label">config</string>
	<string name="btn_save_label">save</string>
	<string name="menu_set_label">setting</string>
	<string name="open_list">openlist</string>
	<string name="title_activity_rate_cal">RateCalActivity</string>
	<string name="cal_inp">input RMB</string>
</resources>
