<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".RateActivity">

    <EditText
        android:id="@+id/rmb"
        android:layout_width="match_parent"
        android:gravity="center"
        android:hint="@string/rmb_hint"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/showout"
        android:textSize="35dp"
        android:text="Hello"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/bnt_dollar"
        android:text="@string/bnt_dollar_label"
        android:layout_width="match_parent"
        android:onClick="onClick"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/bnt_euro"
        android:text="@string/bnt_euro_label"
        android:layout_width="match_parent"
        android:onClick="onClick"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/bnt_won"
        android:text="@string/bnt_won_label"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_opencfg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_opencfg_label"
        android:onClick="openOne"/>


</LinearLayout>